criação da chamada

--- a/index.html
+++ b/index.html
@@ -1,34 +1,94 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Projeto 02</title>
+    <title>Energia Solar</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <meta charset="description" content="Conteúdo do meu site">
     <meta charset="keywords" content="palavras,separadas,por,virgula">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="author" content="SEA-Code">
-    
+
     <script src="main.js"></script>
 </head>
+
 <body>
     <header>
         <div class="container">
-            <div> <div class="logo-1"></div><!--logo-1--> </div>   
-            <div><div class="logo-2"></div><!--logo-2--> </div> <!--div cega para resolver problema no responsivo-->    
-            <div class="clear"></div><!--clear-->         
-        </div><!--container-->
+            <div>
+                <div class="logo-1"></div>
+                <!--logo-1-->
+            </div>
+            <div>
+                <div class="logo-2"></div>
+                <!--logo-2-->
+            </div>
+            <!--div cega para resolver problema no responsivo-->
+            <div class="clear"></div>
+            <!--clear-->
+        </div>
+        <!--container-->
     </header>
 
-    <section class="cover-form"> 
+    <section class="cover-form">
         <div class="container bg">
             <div class="form-container">
-                <h2>QUER SABER QUANTO VOCÊ PODE ECONOMIZAR 
+                <h2>QUER SABER QUANTO VOCÊ PODE ECONOMIZAR
                     PRODUZINDO SUA PRÓPRIA ENERGIA?
                 </h2>
-            </div> <!--form-container-->
-        </div> <!--container-->
-    </section> <!--cover-form-->
+
+                <form>
+                    <div class="form-wraper">
+                        <p>* Nome Completo: </p>
+                        <input type="text" name="nome" required placeholder="Seu Nome" />
+                    </div>
+                    <!--form-wraper-->
+
+                    <div class="form-wraper">
+                        <p>* E-mail: </p>
+                        <input type="text" name="email" required placeholder="Seu E-mail" />
+                    </div>
+                    <!--form-wraper-->
+
+                    <div class="form-wraper">
+                        <p>* Telefone: </p>
+                        <input type="text" name="telefone" required placeholder="Seu Telefone" />
+                    </div>
+                    <!--form-wraper-->
+
+                    <div class="form-wraper">
+                        <input type="submit" name="acao" value="Clique Aqui!" />
+                    </div>
+                    <!--form-wraper-->
+
+                    <div class="form-wraper">
+                        <p>* Campos Obrigatórios</p>
+                    </div>
+                    <!--form-wraper-->
+                </form>
+            </div>
+            <!--form-container-->
+        </div>
+        <!--container-->
+    </section>
+    <!--cover-form-->
+
+    <section class="chamada">
+        <div class="container">
+            <h2>Pague a conta de energia que quiser!</h2>
+            <p>Reduza em até 90% o consumo da sua energia elétrica.</p>çççççm,                                                  n                                ;./ n,
+            /.  0 0  000 1innnnnnnnnnnnnnnnnnnnnnnnn111111111111111111nnnnnnnnnnnnnnnnnnn1111111nnnnnnnnn112nnnn12nnnnnnnn12nnnnnn123nnnnnnnnnnnnnnn311 nnnnnnnnnnnnnnnnn3122n301n301n3,0n,03 n0,3 n
+            3,020
+            ,c 3
+             ]
+             ]
+             çbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbnnnnnnnnnnnnnnn
+        </div>
+    </section>
+    <!--chamada-->
 </body>
+
 </html>
