--- a/index.html
+++ b/index.html
@@ -79,13 +79,7 @@
     <section class="chamada">
         <div class="container">
             <h2>Pague a conta de energia que quiser!</h2>
-            <p>Reduza em até 90% o consumo da sua energia elétrica.</p>çççççm,                                                  n                                ;./ n,
-            /.  0 0  000 1innnnnnnnnnnnnnnnnnnnnnnnn111111111111111111nnnnnnnnnnnnnnnnnnn1111111nnnnnnnnn112nnnn12nnnnnnnn12nnnnnn123nnnnnnnnnnnnnnn311 nnnnnnnnnnnnnnnnn3122n301n301n3,0n,03 n0,3 n
-            3,020
-            ,c 3
-             ]
-             ]
-             çbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbnnnnnnnnnnnnnnn
+            <p>Reduza em até 90% o consumo da sua energia elétrica.</p>
         </div>
     </section>
     <!--chamada-->
