--- a/index.html
+++ b/index.html
@@ -79,10 +79,32 @@
     <section class="chamada">
         <div class="container">
             <h2>Pague a conta de energia que quiser!</h2>
-            <p>Reduza em até 90% o consumo da sua energia elétrica.</p>
+            <p>Reduza em até 90% o consumo da sua energia elétrica. </p>
         </div>
     </section>
     <!--chamada-->
+
+    <section class="mosaico">
+        <div class="container">
+            <div class="flex-mosaico">
+                <div style="background-image:url('images/painel1.jpg');" class="item-1-mosaico" >
+                    
+                </div>
+                <!--item-1-mosaico-->
+
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at tempus odio. Phasellus
+                        pharetra cursus augue in maximus. Duis varius interdum nunc, eget facilisis libero congue et.
+                        Curabitur massa purus, volutpat ullamcorper dolor eget, ornare tincidunt ligula. In finibus
+                        accumsan turpis sit amet sagittis. Donec quis porttitor nulla.</p>
+                </div>
+                <!--item-2-mosaico-->
+            </div>
+            <!--flex-mosaico-->
+        </div>
+        <!--container-->
+    </section>
+    <!--mosaico-->
 </body>
 
 </html>
